# python-config-loader

./: README.md  pyproject.toml
src/config_loader/: __init__.py  config_loader.py  secrets_loader.py
tests/: config-test-secrets.yaml  config-test.json  config-test.yaml  config2-test.toml  conftest.py  test.env  test_config_loader.py  test_configurator.py  test_secrets_loader.py
tests/default/: config-test-default.toml  config-test-default.yaml  defaultonly-default.toml
tests/default2/: config-test-default.yaml
