[project]
name = "python-config-loader"
description = "A module to load and merge configuration files from multiple formats. Allows for parsing of environment variables and dotenv files."

dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["pyyaml >= 6.0.0", "python-dotenv>=1.0.1"]

[tool.setuptools.dynamic]
version = { attr = "config_loader.__version__" }

[project.optional-dependencies]
test = ["pytest >= 7.1.1"]
